--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <title>Portfolio - Cezary Smolarek</title>
+        <head>
+            <title>Portfolio - Cezary Smolarek</title>
+        </head>
     <body>
         
     </body>
